fix background shift no modal

--- a/style.css
+++ b/style.css
@@ -51,6 +51,7 @@ html {
     margin: 0;
     padding: 0;
     overflow-x: clip;
+    scrollbar-gutter: stable;
 }
 
 body {
